--- a/index.html
+++ b/index.html
@@ -48,16 +48,57 @@
         </tbody>
       </table>  
     </div>
-  </div>
-  <div class="container csv-table">
-    <div class="input">
-      <input type="file" >
+    <div class="button">
+      <button id="export">Download CSV</button>
     </div>
   </div>
-</div>
-
-<div class="button">
-  <button id="export">Download CSV</button>
+  <div class="container csv-table">
+    <h1>CSV to Table Upload</h1>    
+    <div class="table">
+      <!-- placeholder for table -->
+      <table id="exportMe">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+          </tr>
+        </thead>
+        <tbody>      
+          <tr>
+            <td>Lorem ipsum dolor</td>
+            <td>Loremipsum@gmail.com</td>
+            <td>+234808700263</td>
+          </tr>
+          <tr>
+            <td>Morbi porttitor</td>
+            <td>porttitor@gmail.com</td>
+            <td>+234809800263</td>
+          </tr>
+          <tr>
+            <td>pellentesque vitae</td>
+            <td>pellentesque@gmail.com</td>
+            <td>+234809800262</td>
+          </tr>
+          <tr>
+            <td>Mauris molestie</td>
+            <td>molestie@gmail.com</td>
+            <td>+234808700263</td>
+          </tr>
+          <tr>
+            <td>metus euismod</td>
+            <td>euismod@gmail.com</td>
+            <td>+234809800543</td>
+          </tr>
+        </tbody>
+      </table>  
+    </div>
+    <div class="upload">
+      <label for="">
+        <input type="file">
+      </label>      
+    </div>
+  </div>
 </div>
 <script src="main.js"></script>
 </body>
