--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
       </table>  
     </div>
     <div class="upload">
-      <label for="">
-        <input type="file">
-      </label>      
+      <label for="upload">
+        <input type="file" id="upload">
+        <span class="file-input">Select file...</span>
+      </label>
+      <button id="uploadBtn">Upload</button>
     </div>
   </div>
 </div>
