--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="row">
   <div class="container table-csv">
-    <h1>Table to CSV Download</h1>
+    <h1>Download Table to CSV</h1>
     <div>
       <table id="exportMe">
         <thead>
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="container csv-table">
-    <h1>CSV to Table Upload</h1>    
+    <h1>Upload CSV to HTML Table</h1>    
     <div class="table">
       <!-- placeholder for table -->
       
