--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="row">
   <div class="container table-csv">
-    <h1>Download Table to CSV</h1>
+    <h1>Download HTML Table to CSV file</h1>
     <div>
       <table id="exportMe">
         <thead>
@@ -53,14 +53,14 @@
     </div>
   </div>
   <div class="container csv-table">
-    <h1>Upload CSV to HTML Table</h1>    
+    <h1>Upload CSV file to HTML Table</h1>    
     <div class="table">
       <!-- placeholder for table -->
       
     </div>
     <div class="upload">
       <label for="upload">
-        <input type="file" id="upload">
+        <input type="file" id="upload" accept=".csv">
         <span class="file-input">Select file...</span>
       </label>
       <button id="uploadBtn">Upload</button>
